fixed spacing on bottom scrim

--- a/_sass/_portal.scss
+++ b/_sass/_portal.scss
@@ -79,7 +79,7 @@ iframe{
 		.portal-parent-fader-bottom{
 			position: absolute;
 			width: 100%;
-			bottom: 8px;
+			bottom: 6px;
 			margin-left: 0px;
 			height: 36px;
 			background-image: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1));
